# pluely

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml
src-tauri/capabilities/: cross-platform.json  default.json
src-tauri/src/: lib.rs  system_audio.rs  system_audio_linux.rs  system_audio_macos.rs  system_audio_windows.rs
src/config/: constants.ts
src/contexts/: app.context.tsx
src/hooks/: useCompletion.ts
src/lib/: analytics.ts  index.ts  pipeline-metrics.ts
src/lib/storage/: customizable.storage.ts
src/pages/app/components/completion/: Files.tsx
src/pages/chats/components/: ChatFiles.tsx
src/pages/settings/: index.tsx
src/pages/settings/components/: index.ts
src/types/: context.type.ts
