[package]
name = "runningbord"
version = "0.1.9"
description = "The Open Source Alternative to Cluely - A lightning-fast, privacy-first AI assistant that works seamlessly during meetings, interviews, and conversations without anyone knowing."
authors = ["Srikanth Nani <srikanthnani1202@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/iamsrikanthnani/runningbord"
homepage = "https://github.com/iamsrikanthnani/runningbord"
documentation = "https://github.com/iamsrikanthnani/runningbord/wiki"
readme = "../README.md"
keywords = ["ai-assistant", "tauri", "desktop-app", "privacy-first", "meeting-assistant"]
categories = ["gui", "multimedia", "accessibility", "science", "development-tools"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "runningbord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenv = "0.15"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.9.0"
tauri-plugin-http = "2.5.2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-keychain = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.6"
xcap = "0.0.12"
base64 = "0.22"
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19.0"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
dotenv = "0.15"
futures-util = "0.3"
anyhow = "1.0"
tracing = "0.1"
tauri-plugin-shell = "2.3.1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-posthog = "0.2.4"
tauri-plugin-machine-uid = "0.1.2"
ringbuf = "0.4"
ogg = "0.9"
opus = "0.3"
rfd = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
objc2 = { version = "0.6", features = ["std"] }
objc2-core-audio = "0.3"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSUUID", "NSValue", "alloc"] }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.15"

